# baresip-node

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json
lib/: index.js
scripts/: build_deps_mac.sh
src/: addon.cc
